--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,10 @@
     "csv-parse": "^5.3.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.0",
+    "typeorm": "^0.2.45",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
